--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <div class="container">
     <h1>Road to Glory: PES 2021</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/en/1/1e/PES_2021_cover.jpg" alt="PES 2021 Cover">
+    <img src="https://akcdn.detik.net.id/community/media/visual/2025/01/26/meme-antony-ke-real-betis-5.png?w=600&q=90" alt="PES 2021 Cover">
     
     <p><strong>Tanggal:</strong> 30 April 2025</p>
     <p><strong>Waktu:</strong> 13.00 WIB</p>
@@ -57,7 +57,7 @@
     <p>Juara 3: Rp5.000</p>
 
     <p><strong>Kuota:</strong> Maksimal 6 orang</p>
-    <p><strong>Daftar via WA:</strong> <a href="https://wa.me/62xxxxxxxxx">Klik untuk mendaftar</a></p>
+    <p><strong>Daftar via WA:</strong> <a href="https://wa.me/6281215994862">Klik untuk mendaftar</a></p>
 
     <p>Gaskeun! Siapakah Raja PES 2021 sesungguhnya?</p>
   </div>
