--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p><strong>Tempat:</strong> Kosmik Gaming (Rental PS4 & PS5)</p>
     
     <h2>Format: Knock Out</h2>
-    <p><strong>Biaya:</strong> 5.500/orang (untuk sewa PS)</p>
+    <p><strong>Biaya:</strong> 5.500/orang </p>
 
     <h2>Hadiah:</h2>
     <p>Juara 1: Rp10.000 + Soto + Es Teh + 2 Gorengan</p>
